# mushroom-ai

./: .dockerignore  .gitattributes  .gitignore  Assignment.ipynb  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  temp_notebook.py  video_script.md
.github/workflows/: deploy.yml
.ipynb_checkpoints/: Assignment-checkpoint.ipynb
api/: Dockerfile  app.py  docker-compose.dev.yml  docker-compose.yml  fly.toml  requirements.txt  schemas.py  test-api.py
api/models/: XGBoost.pkl  XGBoost_metadata.json  columns_types.json  columns_used.json  model_comparison.csv
api/static/: index.html  script.js  style.css
api/tests/: test_api.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
logs/: drop_zeros_info.json  dropped_cols_info.json  feature_optimization.json  grouped_rare_categories.json
models/: Extra_Trees_v2_metadata.json
notebook/: Assignment.ipynb  Assignment.py  video_script.md
src/: assignment.md  metadata.txt
