[project]
name = "mushroom-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.34.3",
    "xgboost>=3.0.2",
]
